--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: HelloBase
 Theme URI: http://underscores.me/
-Author: Underscores.me
+Author: Luice Phillips
 Author URI: http://underscores.me/
 Description: This is a Custom Theme
 Version: 1.0.0
