--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ Theme Name: HelloBase
 Theme URI: http://underscores.me/
 Author: Luice Phillips
 Author URI: http://underscores.me/
+GitHub Theme URI: https://github.com/luicephillips/hellobase
 Description: This is a Custom Theme
 Version: 1.0.0
 License: GNU General Public License v2 or later
