Updated Style Header Information

--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ Theme URI: http://underscores.me/
 Author: Luice Phillips
 Author URI: http://underscores.me/
 GitHub Theme URI: https://github.com/luicephillips/hellobase
+Template Version: 1.0.1
+GitHub Branch: master
 Description: This is a Custom Theme
 Version: 1.0.0
 License: GNU General Public License v2 or later
