--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ Author URI: http://underscores.me/
 GitHub Theme URI: https://github.com/luicephillips/hellobase
 Template Version: 1.0.1
 GitHub Branch: master
+Release Asset: true
 Description: This is a Custom Theme
 Version: 1.0.0
 License: GNU General Public License v2 or later
